crates/rome_cli/tests/snapshots/main::check/apply_suggested.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
## `fix.js`

```js
let a = 4;
console.log(a);

```

# Emitted Messages


