crates/rome_cli/tests/snapshots/main::check/parse_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
## `check.js`

```js
if

```

# Emitted Messages

```block
error[SyntaxError]: expected `(` but instead the file ends
  ┌─ check.js:2:1
  │
2 │ 
  │ ^ the file ends here


```


