crates/rome_cli/tests/snapshots/main::check/should_disable_a_rule.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "rules": {
        "recommended": true,
        "js": {
            "noDebugger": "off"
        }
    }
  }
}
```

## `fix.js`

```js
debugger;
```

# Emitted Messages


