crates/rome_cli/tests/snapshots/main::check/upgrade_severity.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "rules": {
        "recommended": true,
        "js": {
            "noDeadCode": "error"
        }
    }
  }
}
```

## `file.js`

```js
function f() {
    for (;;) {
        continue;
        break;
    }
}

```

# Emitted Messages

```block
error[js/noDeadCode]: This code is unreachable
  ┌─ file.js:3:9
  │  
3 │ ┌         continue;
4 │ │         break;
  │ └──────────────^


```


